2022-01-11 RabbitMQ集成成功, 发送消息测试成功

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,15 @@ spring:
       port: 27017
       database: web-api
 
+  # 外部文件配置rabbitmq
+  rabbitmq:
+    addresses: localhost
+    port: 5672
+    username: guest
+    password: guest
+    virtual-host: /zwe-api
+    connection-timeout: 15000 # 超时时间
+
 mybatis:
   mapper-locations: classpath:/mapper/**/*.xml
   type-aliases-package: top.zwsave.zweapi.db.pojo
