--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,17 @@
 			<version>2.9.2</version>
 		</dependency>
 		
+		<!-- rabbitMQ -->
+		<dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>5.13.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
