2022-01-15 完成注册,登录接口,将数据库id转换为bigint类型,对应java userId转变为Long类型

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/video-dev?nullCatalogMeansCurrent=true
+    url: jdbc:mysql://localhost:3306/zwe-api?nullCatalogMeansCurrent=true
     username: root
     password: root
 
