--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,16 @@
 			<version>2.5.2</version>
 		</dependency>
 		
+		
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
