2022-03-06   版本0.1.1发布上线 (bug: 一个人多次浏览，只想展示这个人最近一次的浏览-->未解决)

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>top.zwsave.zwe-api</groupId>
 	<artifactId>zwe-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.1-SNAPSHOT</version>
 	<name>zwe-api</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -156,7 +156,7 @@
 	</dependencies>
 	
 	<build>
-		<finalName>/dist/${project.artifactId}</finalName>
+		<finalName>/dist/${project.artifactId}-${project.version}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
