--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -22,6 +22,20 @@ spring:
 #      username: zwe
 #      password: Zwe12345
 
+  rabbitmq:
+    addresses: localhost
+    port: 5672
+    username: guest
+    password: guest
+    virtual-host: /zwe-api
+    connection-timeout: 15000 # 超时时间
+    # 消费端配置
+    listener:
+      simple:
+        concurrency: 5 #最大并发
+        acknowledge-mode: manual # 手工签收
+        max-concurrency: 10 # 最大并发数
+        prefetch: 1 # 限流，同一时间只能有一条消息过来
 
 server:
   port: 8280
