2022-03-06   用户注册成功发送邮件, 告诉用户是多少位用户 (bug: 一个人多次浏览，只想展示这个人最近一次的浏览-->未解决)

--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,13 @@
 			<version>1.2.13</version>
 		</dependency>
 		
+		<!-- 添加mail依赖 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
